Se creó con Colab

--- a/Frequencias_e_Medidas.ipynb
+++ b/Frequencias_e_Medidas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcC8tVvJYBZqX49rw8ovDM",
+      "authorship_tag": "ABX9TyOTvM0Plu8/QNSO0GvtXUq6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**Estatística Frequências e Medidas**##\n",
+        "##**Estatística Frequências e Medidas**\n",
         "\n",
         "Você é uma pesquisadora de um cursinho para estudantes que querem\n",
         "ingressar na universidade em 2025. Seu objetivo é retirar informações da\n",
